--- a/gesture_recognition_minimal.ipynb
+++ b/gesture_recognition_minimal.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "27d29d1c",
    "metadata": {},
    "outputs": [
@@ -80,125 +80,62 @@
    ],
    "source": [
     "# Setup paths and configuration\n",
-    "\n",
-    "\n",
     "import os\n",
-    "\n",
-    "\n",
     "from pathlib import Path\n",
-    "\n",
-    "\n",
     "import numpy as np\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "PROJECT_ROOT = Path(os.getcwd()).resolve()\n",
-    "\n",
-    "\n",
     "folder_name = (PROJECT_ROOT / \"archive\").resolve()\n",
-    "\n",
-    "\n",
     "print(f\"Dataset root: {folder_name}\")\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "# Path utility functions\n",
-    "\n",
-    "\n",
     "def resolve_sequence_dir(base_path: Path, sequence_name: str) -> Path:\n",
-    "\n",
     "    \"\"\"Find correct sequence directory path\"\"\"\n",
-    "\n",
     "    candidates = [\n",
-    "\n",
     "        base_path / \"train\" / sequence_name,\n",
-    "\n",
     "        base_path / \"train\" / \"train\" / sequence_name,\n",
-    "\n",
     "        base_path / \"val\" / sequence_name,\n",
-    "\n",
     "        base_path / \"val\" / \"val\" / sequence_name,\n",
-    "\n",
     "    ]\n",
-    "\n",
     "    for path in candidates:\n",
-    "\n",
     "        if path.exists() and path.is_dir():\n",
-    "\n",
     "            return path\n",
-    "\n",
     "    return candidates[0]\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "def list_sequence_frames(sequence_dir: Path) -> list[str]:\n",
-    "\n",
     "    \"\"\"Get sorted list of image frames in sequence directory\"\"\"\n",
-    "\n",
     "    if not sequence_dir.exists():\n",
-    "\n",
     "        return []\n",
-    "\n",
     "    return sorted(\n",
-    "\n",
     "        [f for f in os.listdir(sequence_dir) if f.lower().endswith((\".png\", \".jpg\", \".jpeg\"))]\n",
-    "\n",
     "    )\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "# Load CSV files\n",
-    "\n",
     "train_csv = folder_name / \"train.csv\"\n",
-    "\n",
     "val_csv = folder_name / \"val.csv\"\n",
-    "\n",
     "print(f\"Train CSV: {train_csv}\")\n",
-    "\n",
     "print(f\"Val CSV:   {val_csv}\")\n",
     "\n",
-    "\n",
-    "\n",
     "with train_csv.open(\"r\", encoding=\"utf-8\") as f:\n",
-    "\n",
     "    train_lines = [line.strip() for line in f.readlines() if line.strip()]\n",
-    "\n",
     "with val_csv.open(\"r\", encoding=\"utf-8\") as f:\n",
-    "\n",
     "    val_lines = [line.strip() for line in f.readlines() if line.strip()]\n",
     "\n",
-    "\n",
-    "\n",
     "train_doc = np.random.permutation(train_lines)\n",
-    "\n",
     "val_doc = np.random.permutation(val_lines)\n",
     "\n",
-    "\n",
-    "\n",
     "# Configuration\n",
-    "\n",
-    "batch_size = 12  # Smaller batch size for stability on 4 GB GPU\n",
-    "\n",
-    "x, y, z = 224, 224, 30  # MobileNet input size & sequence length\n",
-    "\n",
-    "num_epochs = 35\n",
-    "\n",
-    "\n",
+    "batch_size = 12  # So luong mau du lieu trong mot lan truyen qua mang\n",
+    "x, y, z = 224, 224, 30  # La chieu rong, chieu cao va do dai chuoi\n",
+    "num_epochs = 35  # La so vong lap dao tao mo hinh\n",
     "\n",
     "print(f\"Training samples: {len(train_doc)}\")\n",
-    "\n",
     "print(f\"Validation samples: {len(val_doc)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3d97ea36",
    "metadata": {},
    "outputs": [
@@ -212,192 +149,90 @@
    ],
    "source": [
     "# Data generator with MobileNet preprocessing\n",
-    "\n",
-    "\n",
     "rng = np.random.default_rng(seed=42)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "def apply_augmentation(image: np.ndarray) -> np.ndarray:\n",
-    "\n",
     "    \"\"\"Lightweight augmentation that keeps gesture orientation.\"\"\"\n",
-    "\n",
-    "    # Random brightness jitter\n",
+    "    # Random brightness Sang, toi\n",
     "\n",
     "    if rng.random() < 0.5:\n",
-    "\n",
     "        factor = rng.uniform(0.85, 1.1)\n",
-    "\n",
     "        image = np.clip(image * factor, 0, 255)\n",
     "\n",
-    "\n",
-    "\n",
-    "    # Random gaussian noise\n",
+    "    # Random gaussian Nhieu\n",
     "\n",
     "    if rng.random() < 0.3:\n",
-    "\n",
     "        noise = rng.normal(0, 5, image.shape)\n",
+    "        image = np.clip(image + noise, 0, 255) #tranh dao nghia left-> right\n",
     "\n",
-    "        image = np.clip(image + noise, 0, 255)\n",
+    "    # Small random contrast Tuong phan\n",
     "\n",
-    "\n",
-    "\n",
-    "    # Small random contrast shift\n",
     "\n",
     "    if rng.random() < 0.3:\n",
-    "\n",
     "        mean = image.mean(axis=(0, 1), keepdims=True)\n",
-    "\n",
     "        image = np.clip((image - mean) * rng.uniform(0.9, 1.1) + mean, 0, 255)\n",
-    "\n",
-    "\n",
-    "\n",
     "    return image.astype(np.uint8)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "def generator_mobilenet_gru(\n",
-    "\n",
     "    source_path: Path,\n",
-    "\n",
     "    folder_list: np.ndarray,\n",
-    "\n",
     "    batch_size: int,\n",
-    "\n",
     "    x: int,\n",
-    "\n",
     "    y: int,\n",
-    "\n",
     "    z: int,\n",
-    "\n",
     "    normalise: bool,\n",
-    "\n",
     "    augment: bool = False,\n",
-    "\n",
     "):\n",
-    "\n",
     "    \"\"\"Generator for MobileNet + GRU model\"\"\"\n",
-    "\n",
     "    print(f\"Source path = {source_path}\")\n",
-    "\n",
-    "\n",
-    "\n",
     "    while True:\n",
-    "\n",
     "        t = np.random.permutation(folder_list)\n",
-    "\n",
-    "\n",
-    "\n",
     "        for i in range(0, len(t), batch_size):\n",
-    "\n",
     "            batch_features = []\n",
-    "\n",
     "            batch_labels = []\n",
-    "\n",
-    "\n",
-    "\n",
     "            for folder in t[i : i + batch_size]:\n",
-    "\n",
     "                try:\n",
-    "\n",
     "                    parts = folder.strip().split(\";\")\n",
-    "\n",
     "                    sequence_name = parts[0]\n",
-    "\n",
     "                    label = int(parts[2])\n",
-    "\n",
-    "\n",
-    "\n",
     "                    sequence_dir = resolve_sequence_dir(source_path, sequence_name)\n",
-    "\n",
     "                    imgs = list_sequence_frames(sequence_dir)\n",
-    "\n",
-    "\n",
-    "\n",
     "                    if len(imgs) < z:\n",
-    "\n",
     "                        continue\n",
-    "\n",
-    "\n",
-    "\n",
     "                    source_frames = np.linspace(0, len(imgs) - 1, z).astype(int)\n",
-    "\n",
-    "\n",
-    "\n",
     "                    batch_data = []\n",
-    "\n",
     "                    for frame_idx in source_frames:\n",
-    "\n",
     "                        image_path = sequence_dir / imgs[frame_idx]\n",
-    "\n",
     "                        image = imageio.imread(image_path)\n",
-    "\n",
-    "\n",
-    "\n",
     "                        if augment:\n",
-    "\n",
     "                            image = apply_augmentation(image)\n",
-    "\n",
-    "\n",
-    "\n",
     "                        image_resized = cv2.resize(image, (224, 224))\n",
-    "\n",
-    "\n",
-    "\n",
     "                        if normalise:\n",
-    "\n",
     "                            image_normalized = tf.keras.applications.mobilenet_v2.preprocess_input(\n",
-    "\n",
     "                                image_resized.astype(np.float32)\n",
-    "\n",
     "                            )\n",
-    "\n",
     "                        else:\n",
-    "\n",
     "                            image_normalized = image_resized.astype(np.float32) / 255.0\n",
-    "\n",
-    "\n",
-    "\n",
     "                        batch_data.append(image_normalized)\n",
-    "\n",
-    "\n",
-    "\n",
     "                    batch_features.append(np.array(batch_data))\n",
     "\n",
-    "\n",
-    "\n",
     "                    one_hot = np.zeros(5)\n",
-    "\n",
     "                    one_hot[label] = 1\n",
-    "\n",
     "                    batch_labels.append(one_hot)\n",
     "\n",
-    "\n",
-    "\n",
     "                except Exception as e:\n",
-    "\n",
     "                    print(f\"Error processing {folder}: {e}\")\n",
-    "\n",
     "                    continue\n",
     "\n",
-    "\n",
-    "\n",
     "            if len(batch_features) > 0:\n",
-    "\n",
     "                yield np.array(batch_features), np.array(batch_labels)\n",
-    "\n",
-    "\n",
     "\n",
     "print(\"Data generator defined successfully\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1d74d68b",
    "metadata": {},
    "outputs": [
@@ -471,99 +306,49 @@
    ],
    "source": [
     "# Model 8: Transfer Learning with MobileNet and GRU (Best performing model)\n",
-    "\n",
-    "\n",
     "def create_mobilenet_gru_model(sequence_length: int = 30,\n",
-    "\n",
     "                                train_backbone: bool = True,\n",
-    "\n",
     "                                trainable_layers: int = 20) -> tf.keras.Model:\n",
-    "\n",
     "    \"\"\"Create MobileNet + GRU model for gesture recognition\"\"\"\n",
     "\n",
-    "\n",
-    "\n",
     "    base_model = MobileNetV2(\n",
-    "\n",
     "        input_shape=(224, 224, 3),\n",
-    "\n",
     "        include_top=False,\n",
-    "\n",
     "        weights=\"imagenet\",\n",
-    "\n",
     "    )\n",
     "\n",
-    "\n",
-    "\n",
     "    if train_backbone:\n",
-    "\n",
     "        # Freeze most layers, fine-tune last `trainable_layers`\n",
-    "\n",
     "        for layer in base_model.layers[:-trainable_layers]:\n",
-    "\n",
     "            layer.trainable = False\n",
-    "\n",
     "        for layer in base_model.layers[-trainable_layers:]:\n",
-    "\n",
     "            layer.trainable = True\n",
-    "\n",
     "    else:\n",
-    "\n",
     "        base_model.trainable = False\n",
-    "\n",
-    "\n",
-    "\n",
     "    model = Sequential([\n",
-    "\n",
-    "        TimeDistributed(base_model, input_shape=(sequence_length, 224, 224, 3)),\n",
-    "\n",
-    "        TimeDistributed(GlobalAveragePooling2D()),\n",
-    "\n",
-    "        TimeDistributed(Dense(256, activation=\"relu\")),\n",
-    "\n",
+    "        TimeDistributed(base_model, input_shape=(sequence_length, 224, 224, 3)), #Mobinet xử lý 1 ảnh nên sd TimeDistributed\n",
+    "        TimeDistributed(GlobalAveragePooling2D()),                               #Nen dac trung khong gian\n",
+    "        TimeDistributed(Dense(256, activation=\"relu\")),                         #Giam chieu dac trung tang toc do xu ly\n",
     "        TimeDistributed(Dropout(0.4)),\n",
-    "\n",
-    "        GRU(128, return_sequences=True, dropout=0.4),\n",
-    "\n",
-    "        GRU(64, dropout=0.4),\n",
-    "\n",
+    "        GRU(128, return_sequences=True, dropout=0.4), #học mối quan hệ giữa 30 frames liên tiếp\n",
+    "        GRU(64, dropout=0.4), #chỉ lấy frame cuối cùng để phân loại,xử lý sâu\n",
     "        Dense(128, activation=\"relu\"),\n",
-    "\n",
     "        Dropout(0.5),\n",
-    "\n",
     "        Dense(5, activation=\"softmax\"),\n",
-    "\n",
     "    ])\n",
-    "\n",
-    "\n",
     "\n",
     "    return model\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "model = create_mobilenet_gru_model(sequence_length=z,\n",
-    "\n",
     "                                    train_backbone=True,\n",
-    "\n",
     "                                    trainable_layers=24)\n",
     "\n",
-    "\n",
-    "\n",
     "optimizer = Adam(learning_rate=1e-4)\n",
-    "\n",
     "model.compile(\n",
-    "\n",
     "    optimizer=optimizer,\n",
-    "\n",
     "    loss=\"categorical_crossentropy\",\n",
-    "\n",
     "    metrics=[\"categorical_accuracy\"],\n",
-    "\n",
     ")\n",
-    "\n",
-    "\n",
     "\n",
     "model.summary()"
    ]
@@ -622,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fd547bd1",
    "metadata": {},
    "outputs": [
@@ -638,16 +423,16 @@
    "source": [
     "# Create data generators\n",
     "train_generator = generator_mobilenet_gru(\n",
-    "    folder_name, train_doc, batch_size, x, y, z, normalise=True, augment=True\n",
+    "    folder_name, train_doc, batch_size, x, y, z, normalise=True, augment=True #Mô phỏng điều kiện thực tế (sáng/tối, nhiễu...)Giảm overfitting\n",
     ")\n",
     "\n",
     "val_generator = generator_mobilenet_gru(\n",
-    "    folder_name, val_doc, batch_size, x, y, z, normalise=True, augment=False\n",
+    "    folder_name, val_doc, batch_size, x, y, z, normalise=True, augment=False #Không augment dữ liệu validation vì validation phải phản ánh dữ liệu thực tế khong bien đổi\n",
     ")\n",
     "\n",
     "# Calculate steps\n",
-    "steps_per_epoch = len(train_doc) // batch_size\n",
-    "validation_steps = len(val_doc) // batch_size\n",
+    "steps_per_epoch = len(train_doc) // batch_size \n",
+    "validation_steps = len(val_doc) // batch_size \n",
     "\n",
     "print(f\"Steps per epoch: {steps_per_epoch}\")\n",
     "print(f\"Validation steps: {validation_steps}\")"
